--- a/Scripts/simplePage.html
+++ b/Scripts/simplePage.html
@@ -8,8 +8,15 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
       </script>
       <script src="JQuery_Plugins/parallax.min.js"></script>
+      <script src="myScript.js" charset="utf-8"></script>
    </head>
    <body>
+      <style media="screen">
+         img{
+            max-width:100%;
+            height: auto;
+         }
+      </style>
 
       <header>
          <h1>Parallax.js</h1>
@@ -17,6 +24,60 @@
       <div class="parallax-window" data-parallax="scroll" data-image-src="Img/constructor.jpg">
          <!-- Tenmos la imagen animada con el efecto parallax -->
       </div>
+      <section>
+
+
+         <div class="nosotros">
+            <h2>La página.</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+         </p>
+         <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+         </p>
+         <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+               sed do eiusmod tempor incididunt ut labore et dolore magna
+               aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+               ullamco laboris nisi ut aliquip ex ea commodo consequat.
+         </p>
+            <button class="cambia" type="button" name="button">
+               Soy un Botón.
+            </button>
+         </div>
+
+         <div class="contenido imagenes deColores">
+
+         <picture>
+            <img src="Img/Construccion.jpg" width="400px" height="400px" alt="Foto_1" >
+         </picture>
+         <picture>
+            <img src="Img/Construcción2.jpg" width="400px" height="400px" alt="Foto_2">
+         </picture>
+            <picture>
+               <img src="Img/onstrucción3.jpg" width="400px" height="400px" alt="Foto_3">
+            </picture>
+         </div>
+         <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+               sed do eiusmod tempor incididunt ut labore et dolore magna
+               aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+               ullamco laboris nisi ut aliquip ex ea commodo consequat.
+         </p>
+
+      </section>
+
+
+      <footer>
+         <div id="elMapa">Aquí va un Mapa.</div>
+         <div id="datosDeLaEmpresa">Los datos de la empresa aquí.</div>
+         <div id="socialesFanPage">Nuestros contactos.</div>
+      </footer>
 
 
    </body>
