Jugando con el Plugin
Unos cuantos ajustes a la página

--- a/Scripts/simplePage.html
+++ b/Scripts/simplePage.html
@@ -21,10 +21,10 @@
       <header>
          <h1>Parallax.js</h1>
       </header>
-      <div class="parallax-window" data-parallax="scroll" data-image-src="Img/constructor.jpg">
+      <div class="parallax-window" data-parallax="scroll" data-image-src="Img/Construccion.jpg">
          <!-- Tenmos la imagen animada con el efecto parallax -->
       </div>
-      <section>
+      <section class="parallax-window" data-parallax="scroll" data-image-src="Img/constructor.jpg">
 
 
          <div class="nosotros">
