--- a/Scripts/simplePage.html
+++ b/Scripts/simplePage.html
@@ -19,7 +19,7 @@
       </style>
 
       <header>
-         <h1>Parallax.js</h1>
+         <h1 class="tituCol">Parallax.js</h1>
       </header>
       <div class="parallax-window" data-parallax="scroll" data-image-src="Img/Construccion.jpg">
          <!-- Tenmos la imagen animada con el efecto parallax -->
