--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      crossorigin="anonymous">
      </script>
       <script src="Plugs_Scripts/JQuery_Plugins/parallax.min.js" charset="utf-8"></script>
+      <script src="script.js" charset="utf-8"></script>
    </head>
    <body>
       <header>
@@ -30,12 +31,17 @@
 
             <div class="carrusel">
             <!--Un carrusel sencillo.-->
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             </div>
 
-            <div class="empresa" >
+            <div class="empresa">
                <h2>Grupo Magnate.</h2>
 
-               <p>
+               <p class="parrafo">
                   Grupo Magnate es una empresa mexicana
                   conformada por un equipo de trabajo de
                   experiencia probada en la industria de la
@@ -46,32 +52,48 @@
 
 
                <h2>Duck-Enter.</h2>
-               <p>
+               <p class="parrafo">
                   Duck-Enter es una empresa incorporada a Grupo Magnate siendo intermediaria
                   en la cadena de subministros y distribuidora de productos americanos
                   con los que se tienen trato directo.
                </p>
                <h2>Soluciones de polímero.</h2>
-               <p>
+               <p class="parrafo">
                   Contamos con una amplia gama de soluciones para su negocio.
                   Nuestra Especialización garantiza su completa satisfacción
                   resolviendo sus necesidades en las siguientes áreas:
                </p>
                <ul>
-                  <li>Polímeros para la estabilización de excavaciones.</li>
-                  <li>Equipo para la perforación</li>
-                  <li>Plantas para enlechado</li>
-                  <li>Equipo usado</li>
+                  <li class="parrafo">Polímeros para la estabilización de excavaciones.</li>
+                  <li class="parrafo">Equipo para la perforación</li>
+                  <li class="parrafo">Plantas para enlechado</li>
+                  <li class="parrafo">Equipo usado</li>
                </ul>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 
             <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Img/Constructor.jpg" >
 
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 
             <div class="dividida">
                <div class="superMud">
-                  <p>
+                  <h3>Super Polifil.</h3> <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <p class="parrafo">
                      Super Polifil es una suspensión de polímero líquido que se utiliza
                      principalmente como un agente para aumentar la viscosidad
                      y como un estabilizador de suelos, ambientalmente seguro para
@@ -84,8 +106,11 @@
                      <br>
                      Usos: En agua salada, estancada, con presencia de petróleo o combustibles.
                      Aditivo de perforación estabilizador, evita pérdida de fluido y derrumbes.
-                     Fill / Sello, disminución de sólidos, agente floculante. Certificado por la AVDPII
-                     (Asosiación Verificadora de Polímeros Internacional e Inventada)
+                     Fill / Sello, disminución de sólidos, agente floculante. <strong>Certificado por la AVDPII
+                     (Asosiación Verificadora de Polímeros Internacional e Inventada).</strong><br>
+                     <br>
+                     <br>
+                     <br>
                   </p>
                </div>
 
@@ -94,12 +119,21 @@
                </div>
             </div>
 
-
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <div class="Productos">
                <div class="servicios">El primer servicio que se ofrece</div>
                <div class="servicios">El segundo servicio que se ofrece</div>
                <div class="servicios">El tercero servicio que se ofrece</div>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 
             <div class="socios">
                <span>Los socios que se tienen</span>
@@ -107,6 +141,10 @@
             </div>
          </section>
       </main>
+      <br>
+      <br>
+      <br>
+      <br>
 
 
 
