Aplicando Off-Canvas
Off Canvas primera vista.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
    </head>
    <body>
       <header>
-         <h1>Soy el titulo de la pagina web</h1>
+         <h1>Soy el título de la página web.</h1>
          <nav>
-            <ul>
-               <li>Home.</li>
-               <li>Empresa.</li>
-               <li>Equipo.</li>
-               <li>Productos.</li>
-               <li>Contacto.</li>
+            <ul class="off-canvas">
+               <li class="elem">Home.</li>
+               <li class="elem">Empresa.</li>
+               <li class="elem">Equipo.</li>
+               <li class="elem">Productos.</li>
+               <li class="elem">Contacto.</li>
             </ul>
          </nav>
       </header>
@@ -70,6 +70,9 @@
                   <li class="parrafo">Equipo usado</li>
                </ul>
             </div>
+
+
+
             <br>
             <br>
             <br>
@@ -79,6 +82,8 @@
             <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Img/Constructor.jpg" >
 
             </div>
+
+
             <br>
             <br>
             <br>
@@ -86,13 +91,16 @@
             <br>
 
             <div class="dividida">
-               <div class="superMud">
-                  <h3>Super Polifil.</h3> <br>
+               <div class="superPolifil">
+                  <h3>Super Polifil.</h3>
+
                   <br>
                   <br>
                   <br>
                   <br>
                   <br>
+                  <br>
+
                   <p class="parrafo">
                      Super Polifil es una suspensión de polímero líquido que se utiliza
                      principalmente como un agente para aumentar la viscosidad
@@ -102,6 +110,7 @@
                      <strong>
                         5 galones de polímero SUPER MUD = 1 tonelada de bentonita convencional.
                      </strong>
+
                      <br>
                      <br>
                      Usos: En agua salada, estancada, con presencia de petróleo o combustibles.
@@ -111,6 +120,7 @@
                      <br>
                      <br>
                      <br>
+
                   </p>
                </div>
 
@@ -124,11 +134,13 @@
             <br>
             <br>
             <br>
-            <div class="Productos">
+
+            <div class="productos">
                <div class="servicios">El primer servicio que se ofrece</div>
                <div class="servicios">El segundo servicio que se ofrece</div>
                <div class="servicios">El tercero servicio que se ofrece</div>
             </div>
+
             <br>
             <br>
             <br>
@@ -151,7 +163,7 @@
 
 
       <footer>
-         <Span><strong>Aqui empieza nuestro pie de página</strong></Span><br>
+         <Span><strong>Aquí empieza nuestro pie de página</strong></Span><br>
          <br>
          <br>
          <br>
