Off canvas completo!
Menú con el patrón Off-Canvas completo.

--- a/index.html
+++ b/index.html
@@ -70,36 +70,15 @@
                   <li class="parrafo">Equipo usado</li>
                </ul>
             </div>
-
-
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
             <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Img/Constructor.jpg" >
 
             </div>
 
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
             <div class="dividida">
                <div class="superPolifil">
                   <h3>Super Polifil.</h3>
 
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
 
                   <p class="parrafo">
                      Super Polifil es una suspensión de polímero líquido que se utiliza
@@ -116,10 +95,7 @@
                      Usos: En agua salada, estancada, con presencia de petróleo o combustibles.
                      Aditivo de perforación estabilizador, evita pérdida de fluido y derrumbes.
                      Fill / Sello, disminución de sólidos, agente floculante. <strong>Certificado por la AVDPII
-                     (Asosiación Verificadora de Polímeros Internacional e Inventada).</strong><br>
-                     <br>
-                     <br>
-                     <br>
+                     (Asosiación Verificadora de Polímeros Internacional e Inventada).</strong>
 
                   </p>
                </div>
@@ -129,11 +105,6 @@
                </div>
             </div>
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
 
             <div class="productos">
                <div class="servicios">El primer servicio que se ofrece</div>
@@ -141,33 +112,16 @@
                <div class="servicios">El tercero servicio que se ofrece</div>
             </div>
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
             <div class="socios">
                <span>Los socios que se tienen</span>
                <!--Todos los socios de la empresa.-->
             </div>
          </section>
       </main>
-      <br>
-      <br>
-      <br>
-      <br>
-
-
-
-
 
       <footer>
          <Span><strong>Aquí empieza nuestro pie de página</strong></Span><br>
-         <br>
-         <br>
-         <br>
-         <br>
+
          <div class="direccion">
             <!--La dirección de la epresa
             y los contactos.-->
