Ajustes en el <main>.
Tuve que ajustar un par de cosas en el main ya que no daban  las
dimensiones que deseaba con respecto a la altura del contenedor.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             <div class="carrusel">
             <!--Un carrusel sencillo.-->
+            <span>Carrusel.</span>
             <br>
             <br>
             <br>
@@ -77,6 +78,7 @@
 
             <div class="dividida">
                <div class="superPolifil">
+
                   <h3>Super Polifil.</h3>
 
 
