--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                      prevenir el desprendimiento y/o colapso de una perforación.
                      super Polifil es mucho más fácil de utilizar que cualquier bentonita.<br><br>
                      <strong>
-                        5 galones de polímero SUPER MUD = 1 tonelada de bentonita convencional.
+                        5 galones de polímero SUPER POLIFIL = 1 tonelada de bentonita convencional.
                      </strong>
 
                      <br>
