Revert "Integración con Google Maps API"
This reverts commit a3e2e37e67ae043ea4db9f60c5a82770114c21bf.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
       <meta charset="utf-8">
       <title>Web one</title>
       <link rel="stylesheet" href="estilos.css">
-      <link rel="shortcut icon" href="favicon.ico">
-      <!-- Bootstrap -->
-     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+      <script
+     src="https://code.jquery.com/jquery-2.2.4.min.js"
+     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+     crossorigin="anonymous">
+     </script>
+      <script src="Plugs_Scripts/JQuery_Plugins/parallax.min.js" charset="utf-8"></script>
+      <script src="script.js" charset="utf-8"></script>
    </head>
-   <body onload="cargar_mapa()">
+   <body>
       <header>
          <h1>Soy el título de la página web.</h1>
          <nav>
@@ -124,14 +128,6 @@
             <!--La dirección de la epresa
             y los contactos.-->
             <p>La direccion de la empresa</p>
-
-            <!--Google Maps API-->
-
-            <div class="container">
-               <h3>Mapa del sitio.</h3>
-        		  <div id='gmap' class="item"></div>
-            </div>
-
          </div>
          <div class="copiright">
             <!--Nombre y copyright-->
@@ -142,20 +138,6 @@
             <!--Aviso de privaciodad e iconos de redes sociales.-->
          </div>
       </footer>
-
-
-
-   <!--Todos los Scripts necesarios. -->
-
-   <script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous">
-  </script>
-   <script src="Plugs_Scripts/JQuery_Plugins/parallax.min.js" charset="utf-8"></script>
-   <script src="script.js" charset="utf-8"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqPSHyvqJ6J6hqnV6w-ErMQ11b6Y_g3nw" async defer></script>
-   <script src="Plugs_Scripts/JQuery_Plugins/app.js" charset="utf-8"></script>
 
    </body>
 </html>
