Intentando resolver los conflictos
Regresando a la versión con Mapa.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
          <div class="direccion">
             <!--La dirección de la epresa
             y los contactos.-->
-            <p>La direccion de la empresa</p>
+            <p>La dirección de la empresa</p>
 
             <!--Google Maps API-->
 
