Un poco de presentación estética.
Un poco más de presentación estética.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                        </picture>
                     </div>
                 </div>
-                
+
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
@@ -107,7 +107,7 @@
                   <li class="parrafo">Equipo usado</li>
                </ul>
             </div>
-            <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Img/Constructor.jpg" >
+            <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Imagenes/excavators2.jpg">
 
             </div>
 
@@ -138,16 +138,37 @@
                   </p>
                </div>
 
-               <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Img/Construccion.jpg">
+               <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Imagenes/excavators5.jpg">
                   <!--Aqui solo queremos un slider-->
                </div>
             </div>
 
 
             <div class="productos">
-               <div class="servicios">El primer servicio que se ofrece</div>
-               <div class="servicios">El segundo servicio que se ofrece</div>
-               <div class="servicios">El tercero servicio que se ofrece</div>
+               <picture class="servicios">
+                <source srcset="Plugs_Scripts/Imagenes/drill.jpg" media="(orientation:portrait)">
+                <source srcset="Plugs_Scripts/Imagenes/drill.jpg" media="(orientation:landscape)">
+                <source srcset="Plugs_Scripts/Imagenes/drill.jpg">
+                <img src="Plugs_Scripts/Imagenes/drill.jpg" alt="Construcción">
+               </picture>
+               <picture class="servicios">
+                <source srcset="Plugs_Scripts/Imagenes/drill3.jpg" media="(orientation:portrait)">
+                <source srcset="Plugs_Scripts/Imagenes/drill3.jpg" media="(orientation:landscape)">
+                <source srcset="Plugs_Scripts/Imagenes/drill3.jpg">
+                <img src="Plugs_Scripts/Imagenes/drill3.jpg" alt="Construcción">
+               </picture>
+               <picture class="servicios">
+                <source srcset="Plugs_Scripts/Imagenes/drill6.jpg" media="(orientation:portrait)">
+                <source srcset="Plugs_Scripts/Imagenes/drill6.jpg" media="(orientation:landscape)">
+                <source srcset="Plugs_Scripts/Imagenes/drill6.jpg">
+                <img src="Plugs_Scripts/Imagenes/drill6.jpg" alt="Construcción">
+               </picture>
+               <picture class="servicios">
+                <source srcset="Plugs_Scripts/Imagenes/drill9.jpg" media="(orientation:portrait)">
+                <source srcset="Plugs_Scripts/Imagenes/drill9.jpg" media="(orientation:landscape)">
+                <source srcset="Plugs_Scripts/Imagenes/drill9.jpg">
+                <img src="Plugs_Scripts/Imagenes/drill9.jpg" alt="Construcción">
+               </picture>
             </div>
 
             <div class="socios">
