Imagenes de muestra.
Se muestran las imagenes de algunos productos en venta

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
 
 
-            <div class="productos">
+            <!-- <div class="productos">
                <picture class="servicios">
                 <source srcset="Plugs_Scripts/Imagenes/drill.jpg" media="(orientation:portrait)">
                 <source srcset="Plugs_Scripts/Imagenes/drill.jpg" media="(orientation:landscape)">
@@ -169,6 +169,26 @@
                 <source srcset="Plugs_Scripts/Imagenes/drill9.jpg">
                 <img src="Plugs_Scripts/Imagenes/drill9.jpg" alt="Construcción">
                </picture>
+            </div> -->
+
+
+            <div class="contenedor">
+               <div class="elemento">
+                   <img src="Plugs_Scripts/Imagenes/drill.jpg" max-width="100%"alt="kit_de_broca_para_concreto">
+                  <p class="deImg">Kit de brocas para concreto.</p>
+               </div>
+               <div class="elemento">
+                  <img src="Plugs_Scripts/Imagenes/drill3.jpg" max-width="100%"alt="Broca_para_concreto">
+                  <p class="deImg">Brocas para concreto.</p>
+               </div>
+               <div class="elemento">
+                  <img src="Plugs_Scripts/Imagenes/drill6.jpg" max-width="100%"alt="Broca_multiusos">
+                  <p class="deImg">Kit de brocas multiuso.</p>
+               </div>
+               <div class="elemento">
+                  <img src="Plugs_Scripts/Imagenes/drill9.jpg" max-width="100%"alt="Esmeriles_especializados.">
+                  <p class="deImg">Esmeril especializado.</p>
+               </div>
             </div>
 
             <div class="socios">
