--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
       <title>Web one</title>
       <link rel="stylesheet" href="Swiper-master/dist/css/swiper.min.css">
       <link rel="stylesheet" href="estilos.css">
-      <link rel="shortcut icon" href="favicon.ico">
+      <link rel="shortcut icon" href="Plugs_Scripts/Imagenes/trucking.png">
+      <link href="https://fonts.googleapis.com/css?family=Aclonica|Acme|Alegreya|Anton|Baloo+Thambi|EB+Garamond|Exo+2|Fjalla+One|Lobster|Lora|Merriweather|Open+Sans+Condensed:300|Oswald|PT+Sans|PT+Serif+Caption|Pathway+Gothic+One|Playfair+Display" rel="stylesheet">
    </head>
    <body onload="cargar_mapa()">
       <header>
-         <h1>Soy el título de la página web.</h1>
+
+         <div class="iconos">
+         <img src="Plugs_Scripts/Imagenes/trucking.png" alt="equipo_de_perforación">
+         <img src="Plugs_Scripts/Imagenes/trucking1.png" alt="enlechadora">
+         <img src="Plugs_Scripts/Imagenes/trucking2.png" alt="enlechadora">
+         <img src="Plugs_Scripts/Imagenes/trucking3.png" alt="enlechadora">
+         </div>
+         <h1>Grupo Magnate.</h1>
+
+            <div id="menuBoton"></div>
          <nav>
             <ul class="off-canvas">
                <li class="elem">Home.</li>
@@ -42,14 +52,6 @@
                          <source srcset="Plugs_Scripts/Img/constructor.jpg" media="(orientation:landscape)">
                         <source srcset="Plugs_Scripts/Img/constructor.jpg">
                         <img class="carrusel" src="Plugs_Scripts/Img/constructor.jpg" alt="Construcción">
-                       </picture>
-                    </div>
-                    <div class="swiper-slide">
-                       <picture>
-                         <source srcset="Plugs_Scripts/Img/Construccion2.jpg" media="(orientation:portrait)">
-                         <source srcset="Plugs_Scripts/Img/Construccion2.jpg" media="(orientation:landscape)">
-                        <source srcset="Plugs_Scripts/Img/Construccion2.jpg">
-                        <img class="carrusel" src="Plugs_Scripts/Img/Construccion2.jpg" alt="Construcción">
                        </picture>
                     </div>
                     <div class="swiper-slide">
