--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="menuBoton"></div>
          <nav>
             <ul class="off-canvas">
-               <li class="elem">Home.</li>
+               <li class="elem">Inicio.</li>
                <li class="elem">Empresa.</li>
                <li class="elem">Equipo.</li>
                <li class="elem">Productos.</li>
