agregando index.html

--- a/index.html
+++ b/index.html
@@ -5,18 +5,10 @@
       <title>Web one</title>
       <link rel="stylesheet" href="Swiper-master/dist/css/swiper.min.css">
       <link rel="stylesheet" href="estilos.css">
-      <script
-     src="https://code.jquery.com/jquery-2.2.4.min.js"
-     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-     crossorigin="anonymous">
-     </script>
-      <script src="Plugs_Scripts/JQuery_Plugins/parallax.min.js" charset="utf-8"></script>
-      <script src="script.js" charset="utf-8"></script>
       <link rel="shortcut icon" href="Plugs_Scripts/Imagenes/trucking.png">
       <link href="https://fonts.googleapis.com/css?family=Aclonica|Acme|Alegreya|Anton|Baloo+Thambi|EB+Garamond|Exo+2|Fjalla+One|Lobster|Lora|Merriweather|Open+Sans+Condensed:300|Oswald|PT+Sans|PT+Serif+Caption|Pathway+Gothic+One|Playfair+Display" rel="stylesheet">
-
    </head>
-   <body>
+   <body onload="cargar_mapa()">
       <header>
 
          <div class="iconos">
@@ -30,7 +22,7 @@
             <div id="menuBoton"></div>
          <nav>
             <ul class="off-canvas">
-               <li class="elem">Inicio.</li>
+               <li class="elem">Home.</li>
                <li class="elem">Empresa.</li>
                <li class="elem">Equipo.</li>
                <li class="elem">Productos.</li>
@@ -214,9 +206,6 @@
          <div class="direccion">
             <!--La dirección de la epresa
             y los contactos.-->
-
-            <p>La direccion de la empresa</p>
-
             <p>La dirección de la empresa</p>
 
             <!--Google Maps API-->
@@ -236,8 +225,6 @@
             <!--Aviso de privaciodad e iconos de redes sociales.-->
          </div>
       </footer>
-
-
 
 
 
@@ -266,7 +253,6 @@
      });
   });
    </script>
-
 
    </body>
 </html>
