--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
    <body onload="cargar_mapa()">
       <header>
 
-         <div class="iconos">
-         <img src="Plugs_Scripts/Imagenes/trucking.png" alt="equipo_de_perforación">
-         <img src="Plugs_Scripts/Imagenes/trucking1.png" alt="enlechadora">
-         <img src="Plugs_Scripts/Imagenes/trucking2.png" alt="enlechadora">
-         <img src="Plugs_Scripts/Imagenes/trucking3.png" alt="enlechadora">
+         <div class="nombre">
+            <div class="iconos">
+            <img src="Plugs_Scripts/Imagenes/trucking.png" alt="equipo_de_perforación">
+            <img src="Plugs_Scripts/Imagenes/trucking1.png" alt="enlechadora">
+            <img src="Plugs_Scripts/Imagenes/trucking2.png" alt="enlechadora">
+            <img src="Plugs_Scripts/Imagenes/trucking3.png" alt="enlechadora">
+            </div>
+            <h1 class ="emprex">Grupo Magnate.</h1>
          </div>
-         <h1>Grupo Magnate.</h1>
 
-            <div id="menuBoton"></div>
-         <nav>
-            <ul class="off-canvas">
-               <li class="elem">Home.</li>
-               <li class="elem">Empresa.</li>
-               <li class="elem">Equipo.</li>
-               <li class="elem">Productos.</li>
-               <li class="elem">Contacto.</li>
-            </ul>
-         </nav>
+            <div id="menuBoton"><!--Off canvas--></div>
+         <div class="item">
+            <nav>
+               <ul class="off-canvas">
+                  <li class="elem">Home</li>
+                  <li class="elem">Empresa</li>
+                  <li class="elem">Equipo</li>
+                  <li class="elem">Productos</li>
+                  <li class="elem">Contacto</li>
+               </ul>
+            </nav>
+         </div>
       </header>
 
       <main>
