--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
    <body onload="cargar_mapa()">
       <header>
 
-         <div class="iconos">
-         <img src="Plugs_Scripts/Imagenes/trucking.png" alt="equipo_de_perforación">
-         <img src="Plugs_Scripts/Imagenes/trucking1.png" alt="enlechadora">
-         <img src="Plugs_Scripts/Imagenes/trucking2.png" alt="enlechadora">
-         <img src="Plugs_Scripts/Imagenes/trucking3.png" alt="enlechadora">
-         </div>
-         <h1>Grupo Magnate.</h1>
+            <div class="iconos">
+            <img src="Plugs_Scripts/Imagenes/trucking.png" alt="equipo_de_perforación">
+            <img src="Plugs_Scripts/Imagenes/trucking1.png" alt="enlechadora">
+            <img src="Plugs_Scripts/Imagenes/trucking2.png" alt="enlechadora">
+            <img src="Plugs_Scripts/Imagenes/trucking3.png" alt="enlechadora">
+            </div>
+            <h1>Grupo Magnate.</h1>
+
 
             <div id="menuBoton"></div>
          <nav>
             <ul class="off-canvas">
-               <li class="elem">Home.</li>
-               <li class="elem">Empresa.</li>
-               <li class="elem">Equipo.</li>
-               <li class="elem">Productos.</li>
-               <li class="elem">Contacto.</li>
+               <li class="elem">Home</li>
+               <li class="elem">Empresa</li>
+               <li class="elem">Equipo</li>
+               <li class="elem">Productos</li>
+               <li class="elem">Contacto</li>
             </ul>
          </nav>
       </header>
@@ -81,19 +82,20 @@
                <h2>Grupo Magnate.</h2>
 
                <p class="parrafo">
-                  Grupo Magnate es una empresa mexicana
-                  conformada por un equipo de trabajo de
-                  experiencia probada en la industria de la
-                  construcción y enfocada en ofrecer
+                  Grupo Magnate es la empresa principal mexicana
+                  integrada por un equipo de trabajo
+                  capacitada y certificada en la industria de la
+                  construcción, nuestro enfoque principal es cubrir
+                  las necesidades de su proyecto implementando
                   la mejor solución a sus necesidades
-                  de cimentación y perforación.
+                  de cimentación, acabado, perforación entre otras.
                </p>
 
 
                <h2>Duck-Enter.</h2>
                <p class="parrafo">
                   Duck-Enter es una empresa incorporada a Grupo Magnate siendo intermediaria
-                  en la cadena de subministros y distribuidora de productos americanos
+                  en la cadena de subministros y socia distribuidora de productos americanos
                   con los que se tienen trato directo.
                </p>
                <h2>Soluciones de polímero.</h2>
@@ -107,6 +109,8 @@
                   <li class="parrafo">Equipo para la perforación</li>
                   <li class="parrafo">Plantas para enlechado</li>
                   <li class="parrafo">Equipo usado</li>
+                  <li class="parrafo">Herramienta para acabado.</li>
+                  <li class="parrafo">Equipo de alta tensión</li>
                </ul>
             </div>
             <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Imagenes/excavators2.jpg">
@@ -144,35 +148,6 @@
                   <!--Aqui solo queremos un slider-->
                </div>
             </div>
-
-
-            <!-- <div class="productos">
-               <picture class="servicios">
-                <source srcset="Plugs_Scripts/Imagenes/drill.jpg" media="(orientation:portrait)">
-                <source srcset="Plugs_Scripts/Imagenes/drill.jpg" media="(orientation:landscape)">
-                <source srcset="Plugs_Scripts/Imagenes/drill.jpg">
-                <img src="Plugs_Scripts/Imagenes/drill.jpg" alt="Construcción">
-               </picture>
-               <picture class="servicios">
-                <source srcset="Plugs_Scripts/Imagenes/drill3.jpg" media="(orientation:portrait)">
-                <source srcset="Plugs_Scripts/Imagenes/drill3.jpg" media="(orientation:landscape)">
-                <source srcset="Plugs_Scripts/Imagenes/drill3.jpg">
-                <img src="Plugs_Scripts/Imagenes/drill3.jpg" alt="Construcción">
-               </picture>
-               <picture class="servicios">
-                <source srcset="Plugs_Scripts/Imagenes/drill6.jpg" media="(orientation:portrait)">
-                <source srcset="Plugs_Scripts/Imagenes/drill6.jpg" media="(orientation:landscape)">
-                <source srcset="Plugs_Scripts/Imagenes/drill6.jpg">
-                <img src="Plugs_Scripts/Imagenes/drill6.jpg" alt="Construcción">
-               </picture>
-               <picture class="servicios">
-                <source srcset="Plugs_Scripts/Imagenes/drill9.jpg" media="(orientation:portrait)">
-                <source srcset="Plugs_Scripts/Imagenes/drill9.jpg" media="(orientation:landscape)">
-                <source srcset="Plugs_Scripts/Imagenes/drill9.jpg">
-                <img src="Plugs_Scripts/Imagenes/drill9.jpg" alt="Construcción">
-               </picture>
-            </div> -->
-
 
             <div class="contenedor">
                <div class="elemento">
