--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
       <link rel="stylesheet" href="Swiper-master/dist/css/swiper.min.css">
       <link rel="stylesheet" href="estilos.css">
       <link rel="shortcut icon" href="Plugs_Scripts/Imagenes/trucking.png">
-      <link href="https://fonts.googleapis.com/css?family=Aclonica|Acme|Alegreya|Anton|Baloo+Thambi|EB+Garamond|Exo+2|Fjalla+One|Lobster|Lora|Merriweather|Open+Sans+Condensed:300|Oswald|PT+Sans|PT+Serif+Caption|Pathway+Gothic+One|Playfair+Display" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Rakkas|Sansita+One|Freckle+Face|Yellowtail" rel="stylesheet">
    </head>
    <body onload="cargar_mapa()">
       <header>
-
             <div class="iconos">
             <img src="Plugs_Scripts/Imagenes/trucking.png" alt="equipo_de_perforación">
             <img src="Plugs_Scripts/Imagenes/trucking1.png" alt="enlechadora">
             <img src="Plugs_Scripts/Imagenes/trucking2.png" alt="enlechadora">
             <img src="Plugs_Scripts/Imagenes/trucking3.png" alt="enlechadora">
             </div>
-            <h1>Grupo Magnate.</h1>
-
-
+            <h1>Grupo Magnate</h1>
             <div id="menuBoton"></div>
          <nav>
             <ul class="off-canvas">
@@ -34,7 +31,6 @@
 
       <main>
          <section>
-
             <!-- Swiper -->
             <div class="swiper-container">
 
@@ -100,9 +96,9 @@
                </p>
                <h2>Soluciones de polímero.</h2>
                <p class="parrafo">
-                  Contamos con una amplia gama de soluciones para su negocio.
-                  Nuestra Especialización garantiza su completa satisfacción
-                  resolviendo sus necesidades en las siguientes áreas:
+                  Nuestra amplia gama basada en soluciones a base de polímero proveen
+                  a su negocio y garantiza su completa satisfacción. Nuestra
+                  experiencia puede resolver sus necesidades en las siguientes áreas:
                </p>
                <ul>
                   <li class="parrafo">Polímeros para la estabilización de excavaciones.</li>
@@ -120,11 +116,8 @@
 
             <div class="dividida">
                <div class="superPolifil">
-
-                  <h3>Super Polifil.</h3>
-
-
-                  <p class="parrafo">
+                  <h3 class="polifil">Super Polifil.</h3>
+                  <p class="parrafo parrafo1">
                      Super Polifil es una suspensión de polímero líquido que se utiliza
                      principalmente como un agente para aumentar la viscosidad
                      y como un estabilizador de suelos, ambientalmente seguro para
@@ -186,7 +179,7 @@
             <!--Google Maps API-->
 
             <div class="container">
-               <h3>Mapa del sitio.</h3>
+               <h3 class="mapa">Mapa del sitio.</h3>
         		  <div id='gmap' class="item"></div>
             </div>
 
