--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
                   a su negocio y garantiza su completa satisfacción. Nuestra
                   experiencia puede resolver sus necesidades en las siguientes áreas:
                </p>
-               <ul>
-                  <li class="parrafo">Polímeros para la estabilización de excavaciones.</li>
-                  <li class="parrafo">Equipo para la perforación</li>
-                  <li class="parrafo">Plantas para enlechado</li>
-                  <li class="parrafo">Equipo usado</li>
-                  <li class="parrafo">Herramienta para acabado.</li>
-                  <li class="parrafo">Equipo de alta tensión</li>
+               <ul class="fa-ul">
+                  <li class="parrafo"><i class="fa fa-truck" aria-hidden="true"></i> Polímeros para la estabilización de excavaciones.</li>
+                  <li class="parrafo"><i class="fa fa-truck" aria-hidden="true"></i> Equipo para la perforación</li>
+                  <li class="parrafo"><i class="fa fa-truck" aria-hidden="true"></i> Plantas para enlechado</li>
+                  <li class="parrafo"><i class="fa fa-truck" aria-hidden="true"></i> Equipo usado</li>
+                  <li class="parrafo"><i class="fa fa-truck" aria-hidden="true"></i> Herramienta para acabado.</li>
+                  <li class="parrafo"><i class="fa fa-truck" aria-hidden="true"></i> Equipo de alta tensión</li>
                </ul>
             </div>
             <div class="parallax" data-parallax="scroll" data-image-src="/Plugs_Scripts/Imagenes/excavators2.jpg">
-
+               <!--Tenemos un fondo con Parallax.js-->
             </div>
 
 
@@ -124,7 +124,7 @@
                      prevenir el desprendimiento y/o colapso de una perforación.
                      super Polifil es mucho más fácil de utilizar que cualquier bentonita.<br><br>
                      <strong>
-                        5 galones de polímero SUPER POLIFIL = 1 tonelada de bentonita convencional.
+                        5 galones de polímero SUPER POLIFIL = <span class="bentonita">1 tonelada de bentonita convencional.</span>
                      </strong>
 
                      <br>
@@ -184,13 +184,23 @@
             </div>
 
          </div>
-         <div class="copiright">
-            <!--Nombre y copyright-->
-            <p>Copiright de la empresa.</p>
-         </div>
-         <div class="sociales">
-            <p>las redes sociales de la empresa.</p>
-            <!--Aviso de privaciodad e iconos de redes sociales.-->
+         <div class="social">
+            <div class="sociales">
+               <span>Puedes seguirnos en las redes sociales.</span>
+               <!--Aviso de privaciodad e iconos de redes sociales.-->
+            </div>
+            <div class="so">
+               <div class="sociales1">
+               <i class="fa fa-facebook-official" aria-hidden="true"></i>
+               <i class="fa fa-twitter" aria-hidden="true"></i>
+               <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+               <i class="fa fa-google-plus" aria-hidden="true"></i>
+               </div>
+            </div>
+            <div class="copiright">
+               <!--Nombre y copyright-->
+               <i class="fa fa-copyright" aria-hidden="true"></i><span> Diseño de McB0y.</span>
+            </div>
          </div>
       </footer>
 
@@ -203,6 +213,9 @@
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous">
   </script>
+  <script src="https://use.fontawesome.com/f9b0ff375d.js">
+     //Libreria importada de font awesome!
+ </script>
    <script src="Plugs_Scripts/JQuery_Plugins/parallax.min.js" charset="utf-8"></script>
    <script src="script.js" charset="utf-8"></script>
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqPSHyvqJ6J6hqnV6w-ErMQ11b6Y_g3nw" async defer></script>
